syntax = "proto3";

package auth;

service Auth {
  rpc Ping(EmptyRequest) returns (Response) {}
  rpc Signup(SignupRequest) returns (Response) {}
  rpc Signin(SigninRequest) returns (Response) {}
}

message EmptyRequest {}

message SignupRequest {
  string name = 1;
  string email = 2;
  string password = 3;
}

message SigninRequest {
  string email = 1;
  string password = 2;
}

message Response {
  string message = 1;
}